<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/chatroomEditFragment"
        android:icon="@drawable/ic_baseline_edit_24"
        android:menuCategory="secondary"
        android:title="@string/edit_chatroom"
        android:titleCondensed="@string/edit_chatroom"
        app:showAsAction="withText" />

    <item
        android:id="@+id/event_create_navigation"
        android:icon="@drawable/ic_baseline_event_24"
        android:menuCategory="secondary"
        android:title="@string/create_event"
        android:titleCondensed="@string/create_event"
        app:showAsAction="withText" />

    <item
        android:id="@+id/action_delete_chatroom"
        android:icon="@drawable/ic_baseline_delete_forever_24"
        android:menuCategory="secondary"
        android:title="@string/delete_chatroom"
        android:titleCondensed="@string/delete_chatroom"
        app:showAsAction="withText" /> <!--TODO: Add dialogfragment for confirming user auth before chatroom deletion and change id to nav graph id-->

    <item
        android:id="@+id/eventSelectionBottomSheetDialogFragment"
        android:icon="@drawable/ic_baseline_event_note_24"
        android:title="@string/manage_events"
        android:titleCondensed="@string/manage_events"
        app:showAsAction="withText" />

</menu>