<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/user_profile_graph"
        android:icon="@drawable/ic_baseline_person_white_24"
        android:title="@string/profile"
        android:titleCondensed="@string/profile"
        android:menuCategory="secondary"
        app:showAsAction="always" />

    <item
        android:id="@+id/joined_chatroom_graph"
        android:icon="@drawable/ic_baseline_mark_chat_read_24"
        android:title="@string/your_chatrooms"
        android:titleCondensed="@string/your_chatrooms"
        android:menuCategory="secondary"
        app:showAsAction="always" />

    <item
        android:id="@+id/chatroom_list_graph"
        android:icon="@drawable/ic_baseline_chat_24"
        android:title="@string/chatrooms"
        android:titleCondensed="@string/chatrooms"
        android:menuCategory="secondary"
        app:showAsAction="always" />
</menu>