<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/chatroomEditDialogFragment"
        android:icon="@drawable/ic_baseline_edit_24"
        android:menuCategory="secondary"
        android:title="@string/edit_chatroom"
        android:titleCondensed="@string/edit_chatroom"
        app:showAsAction="withText" />

    <item
        android:id="@+id/eventEditDialogFragment"
        android:icon="@drawable/ic_baseline_event_24"
        android:menuCategory="secondary"
        android:title="@string/edit_event"
        android:titleCondensed="@string/edit_event"
        app:showAsAction="withText" />

    <item
        android:id="@+id/action_delete_chatroom"
        android:icon="@drawable/ic_baseline_delete_forever_24"
        android:menuCategory="secondary"
        android:title="@string/delete_chatroom"
        android:titleCondensed="@string/delete_chatroom"
        app:showAsAction="withText" /> <!--TODO: Add dialogfragment for confirming user auth before chatroom deletion and change id to nav graph id-->

    <item
        android:id="@+id/action_delete_event"
        android:icon="@drawable/ic_baseline_cancel_24"
        android:menuCategory="secondary"
        android:title="@string/delete_event"
        android:titleCondensed="@string/delete_event"
        app:showAsAction="withText" />
</menu>