<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.example.hobbyfi.viewmodels.shared.CustomTagCreateDialogFragmentViewModel"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/browser_actions_divider_color"
        android:foregroundGravity="center"
        tools:context=".ui.shared.CustomTagCreateDialogFragment">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/custom_tag_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/create_custom_tag_header"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/tag_name_input_field"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </com.google.android.material.textview.MaterialTextView>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tag_name_input_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:hint="@string/tag_name_hint"
            app:endIconMode="clear_text"
            app:errorEnabled="true"
            app:hintEnabled="true"
            app:layout_constraintBottom_toTopOf="@+id/color_picker"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/custom_tag_header"
            app:startIconDrawable="@drawable/ic_baseline_email_white_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_input_tag_name"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:includeFontPadding="true"
                android:inputType="textCapSentences"
                android:singleLine="true"
                android:text="@={viewModel.name}"
                tools:layout_conversion_absoluteHeight="45dp"
                tools:layout_conversion_absoluteWidth="20dp"
                tools:layout_editor_absoluteX="4dp"
                tools:layout_editor_absoluteY="4dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.skydoves.colorpickerview.ColorPickerView
            android:id="@+id/color_picker"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@id/button_bar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tag_name_input_field"
            app:palette="@drawable/color_palette"
            app:selector_size="10dp">

        </com.skydoves.colorpickerview.ColorPickerView>

        <LinearLayout
            android:id="@+id/button_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/color_picker">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/cancel_button"
                android:text="@string/cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp">

            </com.google.android.material.button.MaterialButton>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/confirm_custom_tag_button"
                android:text="@string/confirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            </com.google.android.material.button.MaterialButton>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>