<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_scroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fadeScrollbars="false"
    android:fillViewport="true"
    android:overScrollMode="always"
    android:visibility="visible"
    tools:visibility="visible">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.auth.AuthWrapperFragment">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/title_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="5dp"
            app:layout_constraintBottom_toTopOf="@id/button_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                app:srcCompat="@drawable/hobbyfi_icon">

            </androidx.appcompat.widget.AppCompatImageView>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/app_name_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/app_name"
                android:textSize="42sp"
                android:textStyle="bold">

            </com.google.android.material.textview.MaterialTextView>
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/button_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="124dp"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/sign_up_button"
                android:layout_width="250dp"
                android:layout_height="45dp"
                android:layout_margin="8dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/stroked_rect"
                android:fontFamily="@font/rubik"
                android:text="@string/sign_up"
                android:textSize="20sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/login_button"
                android:layout_width="250dp"
                android:layout_height="45dp"
                android:background="@drawable/rounded_rect"
                android:fontFamily="@font/rubik"
                android:text="@string/login"
                android:textSize="20sp" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>

