<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.create.ChatroomCreateFragment">

    <data>
        <variable
            name="viewModel"
            type="com.example.hobbyfi.viewmodels.create.ChatroomCreateFragmentViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_secondary_gradient">
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/chatroom_create_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/chatroom_create_header"
            android:textSize="36sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </com.google.android.material.textview.MaterialTextView>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/chatroom_image"
            android:layout_width="175dp"
            android:layout_height="135dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/default_pic"
            app:civ_border_color="@color/colorSecondary"
            app:civ_border_width="3dp"
            app:layout_constraintBottom_toTopOf="@id/name_input_field"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/chatroom_create_header" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/name_input_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:hint="@string/chatroom_name_hint"
            app:endIconMode="clear_text"
            app:errorEnabled="true"
            app:hintEnabled="true"
            app:layout_constraintBottom_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:startIconDrawable="@drawable/ic_baseline_email_white_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_input_name"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:includeFontPadding="true"
                android:inputType="textCapSentences"
                android:singleLine="true"
                android:text="@={viewModel.name}"
                tools:layout_conversion_absoluteHeight="45dp"
                tools:layout_conversion_absoluteWidth="20dp"
                tools:layout_editor_absoluteX="4dp"
                tools:layout_editor_absoluteY="4dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/description_input_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:hint="@string/description_hint"
            app:endIconMode="clear_text"
            app:errorEnabled="true"
            app:hintEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/name_input_field"
            app:startIconDrawable="@drawable/ic_baseline_create_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_input_description"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:includeFontPadding="true"
                android:inputType="textCapSentences"
                android:maxLines="2"
                android:singleLine="true"
                android:text="@={viewModel.description}"
                tools:layout_conversion_absoluteHeight="45dp"
                tools:layout_conversion_absoluteWidth="20dp"
                tools:layout_editor_absoluteX="4dp"
                tools:layout_editor_absoluteY="4dp" />
        </com.google.android.material.textfield.TextInputLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>